--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
 </head>
 <body>
 	<h1>Susy Su - A Susy/SCSS playground</h1>
+	<div class="page">
+		Page
+	</div>
+	<div class="sidebar">
+		Sidebar
+	</div>
 </body>
 </html>
