--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
 	<script src="bundle.js"></script>
 </head>
 <body>
-	<h1>Susy Su - A Susy/SCSS playground</h1>
+	<h1>Susy Su - A Susy/SCSS/CSS playground</h1>
 	<div class="page">
-		Page
+		<h2>Page</h2>
 	</div>
 	<div class="sidebar">
-		Sidebar
+		<h2>Sidebar</h2>
+		<nav>
+			<ul>
+				<li><a href="list-total.html">List total</a></li>
+			</ul>
+		</nav>
 	</div>
 </body>
 </html>
