--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 	<h1>Susy Su - A Susy/SCSS/CSS playground</h1>
 	<div class="page">
 		<h2>Page</h2>
+		<div class="margins x">
+			Top
+		</div>
+		<div class="margins y">
+			Bottom
+		</div>
+		<div class="margins z">
+			Under Bottom
+		</div>
 	</div>
 	<div class="sidebar">
 		<h2>Sidebar</h2>
