Box shadow full colour "background"

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		<nav>
 			<ul>
 				<li><a href="list-total.html">List total</a></li>
+				<li><a href="broken-list-total.html">Broken list total</a></li>
 			</ul>
 		</nav>
 	</div>
