--- a/basket2.html
+++ b/basket2.html
@@ -24,24 +24,36 @@
 	<!-- The basket tag, basically -->
 	<footer>
 		<section class="passengerDetails">
-			<ul>
+			<ul class="details">
 				<li><b>Depart</b>, standard premier</li>
 				<li>1 adult x £59.00</li>
-				<li>1 child x £10.00</li>
-				<li>1 youth x £20.00</li>
+				<!-- <li>1 child x £10.00</li> -->
+				<!-- <li>1 youth x £20.00</li> -->
 				<li>£89.00</li>
 			</ul>
-			<ul>
+			<!-- <ul class="prompt">
+				<li>Please choose your <strong>Depart</strong> train</li>
+			</ul> -->
+			<ul class="details">
 				<li><b>Return</b>, standard</li>
 				<li>1 adult x £69.00</li>
+				<!-- <li>1 child x £10.00</li> -->
+				<!-- <li>1 youth x £20.00</li> -->
 				<li>£89.00</li>
 			</ul>
+			<!-- <ul class="prompt">
+				<li>Please choose your <strong>Return</strong> train</li>
+			</ul> -->
 		</section>
 		<section class="grandTotal">
 			<ul>
 				<li>Grand total</li>
 				<li>£9999.00</li>
 			</ul>
+			<!-- <ul class="zero">
+				<li>Grand total</li>
+				<li>£0.00</li>
+			</ul> -->
 			<button>Continue</button>
 		</section>
 	</footer>
