--- a/basket2.html
+++ b/basket2.html
@@ -27,9 +27,9 @@
 			<ul class="details">
 				<li><b>Depart</b>, standard premier</li>
 				<li>1 adult x £59.00</li>
-				<!-- <li>1 child x £10.00</li> -->
+				<li>1 child x £10.00</li>
 				<!-- <li>1 youth x £20.00</li> -->
-				<li>£89.00</li>
+				<li>£189.00</li>
 			</ul>
 			<!-- <ul class="prompt">
 				<li>Please choose your <strong>Depart</strong> train</li>
@@ -37,7 +37,7 @@
 			<ul class="details">
 				<li><b>Return</b>, standard</li>
 				<li>1 adult x £69.00</li>
-				<!-- <li>1 child x £10.00</li> -->
+				<li>1 child x £10.00</li>
 				<!-- <li>1 youth x £20.00</li> -->
 				<li>£89.00</li>
 			</ul>
@@ -48,7 +48,7 @@
 		<section class="grandTotal">
 			<ul>
 				<li>Grand total</li>
-				<li>£9999.00</li>
+				<li>£1234.00</li>
 			</ul>
 			<!-- <ul class="zero">
 				<li>Grand total</li>
